Depth First Search Algo

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "css-loader": "^3.4.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-script": "^2.0.5"
   }
 }
