--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://minhhung19494.github.io/algo_demo/",
   "name": "algo_demo",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,10 +34,12 @@
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-script": "^2.0.5"
+    "react-script": "^2.0.5",
+    "react-switch": "^5.0.1"
   }
 }
